# pyParquetDb

./: .gitignore  hello.py  pyproject.toml  test.py
pyparquet/: __init__.py  module.py  test.py
src/: test.py
